# han-auto

./: .gitignore  README.md  plan.md  pyproject.toml  requirements.txt  가이드.md
Formula/: han-auto.rb
configs/templates/: default.yaml
docs/: homebrew.md  mcp.md
examples/: notice.md
src/han_auto/: __init__.py  cli.py  config.py  draft.py  exceptions.py  formatter.py  hwp.py  hwp2hwpx.py  hwpx_fields.py  hwpx_package.py  hwpx_report.py  hwpx_rewrite.py  mcp_server.py  models.py  parser.py  resources.py  source.py
src/han_auto/resources/configs/templates/: default.yaml
src/han_auto/resources/templates/: README.md
templates/: field-test-2.hwp  field-test.hwp  sample.hwp
tests/: test_cli.py  test_config.py  test_draft.py  test_formatter.py  test_hwp.py  test_hwp2hwpx.py  test_hwpx_fields.py  test_hwpx_package.py  test_hwpx_report.py  test_hwpx_rewrite.py  test_mcp_server.py  test_parser.py  test_source.py
